--- a/LeagueService/Site/Site1.Master
+++ b/LeagueService/Site/Site1.Master
@@ -199,7 +199,7 @@
                             <div class="navCol col-lg-4 col-md-2 visible-lg">
                                 <form class="navbar-form" role="search">
                                     <div class="input-group add-on">
-                                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text">
+                                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text" runat="server"/>
                                         <div class="input-group-btn">
                                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                                         </div>
