--- a/LeagueService/Site/Site1.Master
+++ b/LeagueService/Site/Site1.Master
@@ -199,9 +199,12 @@
                             <div class="navCol col-lg-4 col-md-2 visible-lg">
                                 <form class="navbar-form" role="search">
                                     <div class="input-group add-on">
-                                        <input class="form-control" placeholder="Search" name="srch-term" id="srch-term" type="text" runat="server"/>
+                                        <input class="form-control" placeholder="Search" name="summoner" id="summoner" type="text" runat="server"/>
                                         <div class="input-group-btn">
-                                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                            <button class="btn btn-default" type="submit" runat="server" onserverclick="searchUser">
+                                                <i class="glyphicon glyphicon-search"></i>
+
+                                            </button>
                                         </div>
                                     </div>
                                 </form>
@@ -257,5 +260,25 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        
+        
+        function userFormSubmit()
+        {
+            var user = document.getElementById('UserText').value();
+            PageMethods.User(user, Success, Failure);
+            return false;
+  
+        }
+
+        function Success(response)
+        {
+            alert(response);
+        }
+        function Failure(error)
+        {
+            alert(error);
+        }
+    </script>
 </body>
 </html>
